# rust-sdl2

./: .gitmodules  Cargo.toml
sdl2-sys/: Cargo.toml  build.rs
sdl2-sys/bundled/: CMakeLists.txt
